# generate_table_to_struct_code

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data_base/: mod.rs
src/data_base/mysql/: mod.rs  mysql_handler.rs
src/data_base/postgres/: postgres_handler.rs
src/file/: mod.rs
src/model/: mod.rs
src/model/table/: field.rs  structs.rs
