[package]
name = "generate_table_to_struct_code"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
structopt = "0.3.25"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "macros",
] }
#日期
chrono = "0.4.38"
tokio-postgres = "0.7.10"
mysql_async = "0.34.1"
### postgres数据库驱动
#postgres = "0.19.7"
### mysql数据库驱动
#mysql = "25.0.1"
